[package]
name = "harmonia"
description = "Effortlessly beautify your Spotify playlists with just a single, enchanting script"
version = "0.1.0"
edition = "2021"
authors = ["gulje <guljeee@yandex.com>"]
license = "GPL-3.0"

[dependencies]
clap = { version = "4.3.4", features = ["derive", "cargo"] }
